# warehouse

./: .gitignore  README.md  docker-compose.yaml  home_assignment.md
src/api/: Dockerfile  conftest.py  pyproject.toml  pytest.ini
src/api/customers/: admin.py  models.py  views.py
src/api/customers/migrations/: 0001_initial.py
src/api/customers/tests/: test_api.py
src/api/purchases/: models.py  serializers.py  services.py  views.py
src/api/purchases/migrations/: 0001_initial.py
src/api/purchases/tests/: test_api.py
src/api/storages/: admin.py  exceptions.py  models.py
src/api/storages/migrations/: 0001_initial.py  0002_auto_20200806_0901.py  0003_auto_20200806_1116.py
src/api/stores/: admin.py  models.py  views.py
src/api/stores/migrations/: 0001_initial.py
src/api/stores/tests/: test_api.py
src/api/warehouse/: settings.py  urls.py
src/common/: exceptions.py  models.py  pyproject.toml  utils.py
src/common/tests/: test_transaction.py  test_utils.py
src/importer/: exceptions.py  main.py  models.py  pyproject.toml
src/importer/tests/: test_main.py
src/importer/tests/resources/: example.csv
src/service/: db.py  db_utils.py  exceptions.py  main.py  models.py  pyproject.toml
src/service/tests/: test_main.py
