[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["tamas.eger <egertamas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1"
djangorestframework = "^3.11.1"
JSON-log-formatter = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest-django = "^3.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
